# codex_terminal_manage

./: .gitignore  AGENTS.md  README.md  jobs.md  restart_backend.ps1  test_api.ps1  update.md  启动指南.md
backend/: pyproject.toml  start_backend.ps1
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/core/: config.py
backend/app/services/: session_manager.py
backend/app/utils/: git.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/components/: ProfileModal.tsx  TerminalPanel.tsx
